apps/base/immich/immich-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v1.140.0
          volumeMounts:
            - name: shared-storage
              subPath: files/immich/data
              mountPath: /data
            - name: shared-storage
              subPath: files/immich/external-library
              mountPath: /external-library
          ports:
            - containerPort: 2283
          resources:
            limits:
              memory: 1Gi
              cpu: 500m
            requests:
              memory: 768Mi
              cpu: 100m
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: immich-shared-nfs-pvc
