apps/base/immich/immich-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
spec:
  selector:
    app: immich-server
  ports:
    - name: http
      protocol: TCP
      port: 2283
      targetPort: 2283
